kube/maria.yaml
apiVersion: v1
kind: Service
metadata:
  name: maria
spec:
  selector:
    app: maria
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maria
spec:
  selector:
    matchLabels:
      app: maria
  template:
    metadata:
      labels:
        app: maria
    spec:
      containers:
        - name: mariadb
          image: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: storage
              mountPath: /data/db
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: maria-pvc
