kube/twwo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twwo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: twwo
  template:
    metadata:
      labels:
        app: twwo
    spec:
      containers:
        - name: app
          image: jaroslawpokropinski/twwo
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: twwo
spec:
  selector:
    app: twwo
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
