kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: path-ingress
spec:
  rules:
  - http:
      paths:
      - path: "/api/"
        backend:
          serviceName: twwo
          servicePort: 80
